--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<tbody>
 		    <tr>        
 		        <td>1</td>
-		        <td>Mayank</td>		       
+		        <td>Yogesh</td>		       
 		   </tr>
 		   <tr>        
 		        <td>2</td>
@@ -71,7 +71,7 @@
 		<tbody>
 		    <tr>        
 		        <td>1</td>
-		        <td>Mayank</td>		       
+		        <td>Yogesh</td>		       
 		   </tr>
 		   <tr>        
 		        <td>2</td>
